@startuml posts_database
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "Post" as post {
    *id : number <<generated>>
    --
    *caption: text
    *type: text
    *is_Hidden: text
    *user_id: number <<FK>>
    *ready: boolean
    *created: boolean
}

entity "Media" as media {
    *id : number <<generated>>
    --
    *post_id: number <<FK>>
    *group_id: number <<FK>>
    *option_id: number <<FK>>
    *URL: text
}

entity "Group" as group {
    *id : number <<generated>>
    --
    *post_id: number <<FK>>
    *name : text
}

entity "Option" as option {
    *id : number <<generated>>
    --
    'content column is just text content of the text options
    'images are requested from media service by post id
    *group_id : <<FK>>
    *body : text
    *vote_count : number
}

entity "Vote" as vote {
    *id : number <<generated>>
    --
    *option_id: number <<FK>>
    *user_id: number <<FK>>
}

post ||..|{ media
post ||..|{ group
group ||..|{ option
option ||..|{ vote
media ||..|| option
media ||..|| group

@enduml